--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
     id 'eclipse'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
 }
 
 repositories {
@@ -27,9 +28,20 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 application {
     // Define the main class for the application.
     mainClassName = 'BOJ.App'
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
